--- a/angular2/src/public/index.html
+++ b/angular2/src/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/static/img/favicon.ico">
     <title>ng2-webpack</title>
     <base href="./">
   </head>
